fixed some margins and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -51,10 +51,10 @@ div {
 
 .infoheader {
   margin-bottom: 10px;
-  padding-left: 10px;
+  padding-left: 25px;
   padding-bottom: 5px;
   padding-top: 5px;
-  padding-right: 10px;
+  padding-right: 25px;
   display: flex;
   justify-content: center;
   justify-content: space-between;
@@ -141,11 +141,11 @@ img {
 .intructions {
   color: white;
   width: 500px;
-  height: 530px;
+  height: 590px;
   display: inline-flex;
   text-align: center;
   margin-left: 25px;
-  margin-top: 32px;
+  padding-top: 20px;
   border-right: 10px solid black;
   border-bottom: 10px solid black;
   border-left: 4px solid black;
@@ -158,7 +158,7 @@ img {
   font-size: 45px; }
 
 .list {
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   border-bottom: 10px dashed black; }
 
 .list:hover {
