--- a/scss/infoheader.scss
+++ b/scss/infoheader.scss
@@ -1,9 +1,9 @@
 .infoheader {
   margin-bottom: 10px;
-  padding-left: 10px;
+  padding-left: 25px;
   padding-bottom: 5px;
   padding-top: 5px;
-  padding-right: 10px;
+  padding-right: 25px;
   display: flex;
   justify-content: center;
   justify-content: space-between;
