--- a/scss/intructions.scss
+++ b/scss/intructions.scss
@@ -1,11 +1,11 @@
 .intructions {
   color: white;
   width: 500px;
-  height: 530px;
+  height: 590px;
   display:inline-flex;
   text-align: center;
   margin-left: 25px;
-  margin-top: 32px;
+  padding-top: 20px;
   border-right: 10px solid black;
   border-bottom: 10px solid black;
   border-left: 4px solid black;
@@ -20,7 +20,7 @@
 }
 
 .list {
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   border-bottom: 10px dashed black;
 }
 
